# pulse

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
