[package]
name = "pulse"
version = "0.0.0"
description = "A minimalist keep-awake utility"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Añadimos el plugin que la plantilla base reclama
tauri-plugin-opener = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
